<resources>
  <string name="app_name">Hall Monitor</string>
  <string name="action_settings">Settings</string>
  <string name="admin_excuse">Hall Monitor needs to be able to lock the screen.</string>
  <string name="admin_granted">Hall Monitor admin status granted!</string>
  <string name="admin_revoked">Hall Monitor admin status revoked!</string>
  <string name="admin_refused">View cover service requires admin status</string>
  <string name="notif_please_check">To enable this setting, check the Hall Monitor box and hit the back button.</string>
  <string name="notif_please_uncheck">To disable this setting, uncheck the Hall Monitor box and hit the back button.</string>
  <string name="notif_left_checked">You didn\&#39;t uncheck the box, so the notification service is still running.</string>
  <string name="notif_left_unchecked">You didn\&#39;t check the box! Are you trying to make me crash?</string>
  <string name="pref_instructions"></string>
  <string name="pref_instructions_summary">The checkboxes below are also submenus! Click on the text to access more settings.</string>
  <string name="pref_enabled">Enable</string>
  <string name="pref_enabled_summary">Whether the view cover service is enabled and runs at boot</string>
  <string name="pref_optional">Optional Features</string>
  <string name="pref_optional_summary">Click through to enable/disable features and access input options.</string>
  <string name="pref_displayoptions">Display Options</string>
  <string name="pref_displayoptions_summary">Click through to customize HallMonitor display.</string>
  <string name="pref_widgets">Widget Settings</string>
  <string name="pref_widgets_summary">Click through to configure widgets</string>
  <string name="pref_security_settings">Screen Lock Settings</string>
  <string name="pref_security_settings_summary">Shortcut to Android screen lock settings</string>
  <string name="pref_force_restart">Force restart Hall Monitor</string>
  <string name="pref_force_restart_summary">Exit application and restart it after 1 second.</string>
  <string name="pref_about">About Hall Monitor</string>
  <string name="pref_about_summary">Hall Monitor version 2.0.0.\nProduced by Alex Burka (@durka), @manusfreedom, @B--B, @Wallace0, @habeIchVergessen, released under the Apache v2 License.\nFeedback: android@alexburka.com</string>
  <string name="pref_enabled_title">General Settings</string>
  <string name="pref_os_power_management">Use OS power management</string>
  <string name="pref_os_power_management_summary">If on, use OS to manage screen on/off and device sleep.</string>
  <string name="pref_internal_power_management">Use HallMonitor power management</string>
  <string name="pref_internal_power_management_summary">If on, use HallMonitor to manage screen on/off and device sleep during cover event and when cover is closed. Require Hallmonitor in system apps.</string>
  <string name="pref_lockmode">Use lock device</string>
  <string name="pref_lockmode_summary">If on, lock the device at timeout instead of put device in sleep. Require admin permission.</string>
  <string name="pref_keep_admin">Keep device admin status</string>
  <string name="pref_keep_admin_summary">When Hall Monitor is disabled, don\&#39;t relinquish Device Administrator permissions. If checked, Hall Monitor won\&#39;t need to ask to become Device Administrator when you turn it on. May be useful with automation, e.g. Tasker.</string>
  <string name="pref_delay">Covered screen timeout</string>
  <string name="pref_delay_summary">When the cover is closed, Hall Monitor stays up for this many milliseconds. If set to 0, the screen turns off immediately (lock the device if lock mode). If OS power management used, only enable system to sleep (it will use screen off timer of OS after this delay).</string>
  <string name="pref_runasroot">Use Root access</string>
  <string name="pref_runasroot_summary">Should the app run with root permissions, required for internal services and for touch cover feature. Allow permanent root access for best results.</string>
  <string name="pref_internalservice">Use internal service</string>
  <string name="pref_internalservice_summary">Use internal service Real Hall instead of ROM integrated LID event. Turn off if your ROM support it.</string>
  <string name="pref_internalservice_title">Internal Service</string>
  <string name="pref_disable_home">Disable buttons</string>
  <string name="pref_disable_home_summary">If checked, the back/menu/home buttons are disabled while the cover is closed. Require Real FullScreen off.</string>
  <string name="pref_disable_enabled">Disable buttons is enable, please disable it to use Real FullScreen</string>
  <string name="pref_keyguard">Enable/Dismiss Keyguard</string>
  <string name="pref_keyguard_summary">If checked, dismiss the default lock screen when user open the cover. Not working with secure lock screen (Password, PIN, etc.).</string>
  <string name="pref_hardwareAccelerated">Use hardware accelerated display</string>
  <string name="pref_hardwareAccelerated_summary">Use hardware accelerated display. Require a Hall Monitor restart.</string>
  <string name="pref_realhall">Use Real Hall</string>
  <string name="pref_realhall_summary">Use real hall sensor.</string>
  <string name="pref_realhall_requirement">Proximity is enable or Root is disable, please disable Proximity and enable Root to use Real Hall</string>
  <string name="pref_proximity">Use Proximity sensor</string>
  <string name="pref_proximity_summary">Use proximity sensor.</string>
  <string name="pref_proximity_requirement">Real Hall is enable, please disable it to use Proximity</string>
  <string name="pref_layout">Layouts</string>
  <string name="pref_layout_summary">Switch between default layout and an alternative layout.</string>
  <string name="pref_realfullscreen">Use Real FullScreen</string>
  <string name="pref_realfullscreen_summary">Hide all system bar: navigation bar,... Require Disable buttons off.</string>
  <string name="pref_realfullscreen_enabled">Real FullScreen is enable, please disable it to use Disable button</string>
  <string name="pref_default_bgcolor">Background color</string>
  <string name="pref_default_bgcolor_summary">Background of the view you will see through the closed cover</string>
  <string name="pref_default_fgcolor">Foreground color</string>
  <string name="pref_default_fgcolor_summary">Text color for the clock you will see through the closed cover</string>
  <string name="pref_datetime">Display time and date</string>
  <string name="pref_datetime_summary">If checked, display time and date instead of only time.</string>
  <string name="pref_notifications">Show notification icons</string>
  <string name="pref_notifications_summary">If this is enabled, you will see the current notifications icons when the screen turns on while the cover is closed.</string>
  <string name="pref_features_instructions"></string>
  <string name="pref_features_instructions_summary">The following feature use touch screen, to be fully working please enable Root access.</string>
  <string name="pref_flash_controls">Torch Controls</string>
  <string name="pref_flash_controls_summary">Whether to include a button to turn the torch on and off on the lock screen (touch for more)</string>
  <string name="default_torch_enabled">Default torch is already enabled, you don\&#39; t need another torch button!</string>
  <string name="no_torch_app">Default CM torch application is not installed - cannot enable torch button, please try alternative method!</string>
  <string name="pref_flash_controls_alternative">Alternative Torch Controls</string>
  <string name="pref_flash_controls_alternative_summary">This is an alternative to stock CM torch App for users that installs HallMonitor in non-CM roms (touch for more)</string>
  <string name="alternative_torch_enabled">Alternative torch is already enabled, you don\&#39; t need another torch button!</string>
  <string name="no_torch">Cannot enable torch button, your phone does not support this function!</string>
  <string name="pref_camera_controls">Camera Controls</string>
  <string name="pref_camera_controls_summary">Whether to include a button to activate the camera on the lock screen</string>
  <string name="pref_alarm_controls">Alarm Controls</string>
  <string name="pref_alarm_controls_summary">Whether to show alarm dismiss and snooze buttons in the cover window if the alarm goes off whilst the cover is closed (touch for more)</string>
  <string name="pref_phone_screen">Phone Controls</string>
  <string name="pref_phone_screen_summary">Whether to show phone call accept and reject buttons if the phone rings whilst the cover is closed (touch for more)</string>
  <string name="pref_phone_screen_title">Phone Controls</string>
  <string name="pref_input_settings">Input Controls</string>
  <string name="pref_input_settings_summary">Switch some input event</string>
  <string name="pref_input_screen_title">Input Controls</string>
  <string name="pref_torch_input">Swipe torch controls</string>
  <string name="pref_torch_input_summary">Switch between the default torch push button controls and the experimental functions that uses real swipe control. This function may not work properly, use at your own risk</string>
  <string name="pref_camera_input">Swipe camera controls</string>
  <string name="pref_camera_input_summary">Switch between the default camera push button controls and the experimental functions that uses real swipe control. This function may not work properly, use at your own risk</string>
  <string name="pref_alarm_input">Swipe alarm controls</string>
  <string name="pref_alarm_input_summary">Switch between the default alarm push button controls and the experimental functions that uses real swipe control. This function may not work properly, use at your own risk</string>
  <string name="pref_incoming_call_input">Swipe incoming call controls</string>
  <string name="pref_incoming_call_input_summary">Switch between the default incoming call drag and drop controls and the experimental functions that uses real swipe control. This function may not work properly, use at your own risk</string>
  <string name="pref_settings">Settings</string>
  <string name="pref_phone_controls_tts">Text-To-Speech</string>
  <string name="pref_phone_controls_tts_summary">Speaks the caller ID of incoming calls based on your phone´s stored contacts. connected headset is required.</string>
  <string name="pref_phone_controls_tts_delay">Text-To-Speech Delay</string>
  <string name="pref_phone_controls_tts_delay_summary">Delay before speaking the caller ID of incoming calls.</string>
  <string name="pref_phone_controls_speaker">Speaker Enable</string>
  <string name="pref_phone_controls_speaker_summary">suppress headset check</string>
  <string name="pref_default_widget">Show alternative widget</string>
  <string name="pref_default_widget_summary">Whether to use a 3rd party widget inside the cover window as the default view</string>
  <string name="pref_media_widget">Media Widget</string>
  <string name="pref_media_widget_summary">Whether to use a 3rd party widget inside the cover window to show when media is playing or headphones are connected</string>
  <string name="firstrun_message">I see you\&#39;ve upgraded to version %s! Be sure to click on everything, there are tons of new features.</string>
  <string name="firstrun_ok">OK</string>
  <string name="hall_file">/sys/devices/virtual/sec/sec_key/hall_detect</string>
  <string name="unknown_caller">Unknown caller</string>
  <string name="title_activity_window">WindowActivity</string>
  <string name="hello_world">Hello world!</string>
  <string name="title_activity_fullscreen">FullscreenActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
  <string name="snooze">SNOOZE</string>
  <string name="dismiss">DISMISS</string>
</resources>