<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <org.durka.hallmonitor.PreferenceSwitchable android:key="pref_layout"
                                              android:title="@string/pref_layout"
                                              android:summary="@string/pref_layout_summary"
                                              android:defaultValue="false" />
  <org.durka.hallmonitor.PreferenceSwitchable android:key="pref_realfullscreen"
                                              android:title="@string/pref_realfullscreen"
                                              android:summary="@string/pref_realfullscreen_summary"
                                              android:defaultValue="false" />
  <org.durka.hallmonitor.PreferenceSwitchable android:key="pref_os_power_management"
                                              android:title="@string/pref_os_power_management"
                                              android:summary="@string/pref_os_power_management"
                                              android:defaultValue="false" />
  <org.durka.hallmonitor.PreferenceSwitchable android:key="pref_lockmode"
                                              android:title="@string/pref_lockmode"
                                              android:summary="@string/pref_lockmode_summary"
                                              android:defaultValue="false" />
  <com.hlidskialf.android.preference.SeekBarPreference android:key="pref_delay"
                                                       android:title="@string/pref_delay"
                                                       android:summary="@string/pref_delay_summary"
                                                       android:dialogMessage="@string/pref_delay_summary"
                                                       android:defaultValue="10000"
                                                       android:max="30000" />
  <CheckBoxPreference android:key="pref_dim"
                      android:title="@string/pref_dim"
                      android:summary="@string/pref_dim_summary"
                      android:dependency="pref_delay"
                      android:defaultValue="true" />
  <afzkl.development.colorpickerview.preference.ColorPickerPreference android:key="pref_default_bgcolor"
                                                                      android:title="@string/pref_default_bgcolor"
                                                                      android:summary="@string/pref_default_bgcolor_summary"
                                                                      android:defaultValue="0xFFA5C8F2" />
  <afzkl.development.colorpickerview.preference.ColorPickerPreference android:key="pref_default_fgcolor"
                                                                      android:title="@string/pref_default_fgcolor"
                                                                      android:summary="@string/pref_default_fgcolor_summary"
                                                                      android:defaultValue="0xFF33B5E5" />
  <CheckBoxPreference android:key="pref_datetime"
                      android:title="@string/pref_datetime"
                      android:summary="@string/pref_datetime_summary"
                      android:defaultValue="false" />
  <CheckBoxPreference android:key="pref_disable_home"
                      android:title="@string/pref_disable_home"
                      android:summary="@string/pref_disable_home_summary"
                      android:defaultValue="true" />
  <CheckBoxPreference android:key="pref_keyguard"
                      android:title="@string/pref_keyguard"
                      android:summary="@string/pref_keyguard_summary"
                      android:defaultValue="false" />
  <CheckBoxPreference android:key="pref_keep_admin"
                      android:title="@string/pref_keep_admin"
                      android:summary="@string/pref_keep_admin_summary"
                      android:defaultValue="false" />
  <org.durka.hallmonitor.PreferenceSwitchable android:key="pref_hardwareAccelerated"
                                              android:title="@string/pref_hardwareAccelerated"
                                              android:summary="@string/pref_hardwareAccelerated_summary"
                                              android:defaultValue="false" />
</PreferenceScreen>
